fixed degree sign missalignment on mobile

--- a/src/app/home-screen/home-screen.component.css
+++ b/src/app/home-screen/home-screen.component.css
@@ -137,8 +137,8 @@
 .temp-container span{
    font-size: 18px;
    position: absolute;
-   left: 3rem;
-   top: .5rem;
+   left: 3.25rem;
+   top: .75rem;
 }
 
 .weather-descriptor{
